[tool.poetry]
name = "fib"
version = "0.1.0"
description = ""
authors = ["Hiroaki Yamamoto <hiroaki@hysoftware.net>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.18.1"
click = "^7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
